# Backend-definitivo-V5

./: .ci-trigger-phase7  .ci-trigger-pr27  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADDED_FILES.txt  CHANGELOG.md  CONTRATTO_JSON_test.md  DEVELOPMENT_TEAM_HANDOFF.md  Dockerfile  MANIFEST.json  MODIFIED_FILES.txt  Makefile  PATCH_MANIFEST.md  README.md  README_MANUAL_UPLOAD.md  __init__.py  activity_charts.py  analyze_synthetic_fit_dataset.py  analyze_uploaded_fit_archives.py  analyze_uploaded_fit_full_engine_audit.py  api_adaptive_load.py  api_app.py  audit.py  bayesian_profiler.py  cardiac_engine.py  chart_builder.py  coggan_classifier.py  comprehensive_stress_test.py  cross_validation_engine.py  data_quality_engine.py  detraining_engine.py  durability_engine.py  efforts_analyzer.py  explainability_engine.py  fit_parser.py  hrv_engine.py  interval_detector.py  lab_data.py  (+50 more)
.automation/: phase7-ci-fix.patch  phase7.part1.b64  phase7.part2.b64  phase7.part3.b64  phase7.part4.b64  phase7.part5.b64
.github/workflows/: apply-fit-decoder-boundary-safety.yml  apply-fit-phase8-typed-boundary-test.yml  apply-phase7-ci-fix-once.yml  apply-phase7-once.yml  apply-pr27-compatibility-fix.yml  ci.yml  full-check.yml  hardening.yml  multitenant-stress.yml  openapi-codegen-once.yml
.integration/pr1/: part000  part001  part002  part003  part004  part005  part006  part007  part008  part009  part010  part011  part012  part013
api/: __init__.py  activity_streams.py  app.py  chart_schemas.py  coach_schemas.py  deps.py  domain_schemas.py  engine_schemas.py  errors.py  helpers.py  metabolic_curve_schemas.py  nutrition_schemas.py  openapi.py  parsing.py  responses.py  route_docs.py  schemas.py  serialization.py  strength_schemas.py  upload.py
api/auth/: __init__.py  config.py  jwt.py  principal.py  service.py
api/routers/: __init__.py  athletes.py  coach_support.py  dashboard.py  explainability.py  health.py  history.py  integrations.py  lab.py  load.py  load_extended.py  meta.py  performance.py  planning.py  profile.py  profile_extended.py  race.py  readiness.py  ride.py  ride_analytics.py  team.py  test_routes.py  twin.py  workouts.py
api/services/: __init__.py  coach_service.py  dashboard_service.py  engine_context.py  explainability_service.py  fatmax_profile_service.py  history_service.py  integration_service.py  lab_service.py  load_extended_service.py  load_service.py  meta_service.py  metabolic_curves_service.py  metabolic_profile_service.py  mmp_aggregate_service.py  mmp_publication_gate.py  performance_service.py  planning_service.py  profile_extended_service.py  profile_service.py  race_service.py  readiness_service.py  ride_analytics_service.py  ride_service.py  team_service.py  test_service.py  threshold_service.py  twin_service.py  workout_service.py
docs/: API_ENDPOINT_INDEX.md  API_EXAMPLES.md  API_PAYLOAD_EXAMPLES.md  ARCHITECTURE.md  ATHLETE_MODEL_DEPLOY_CHECKLIST.md  BACKEND_COMPLETENESS_REPORT.md  BACKEND_IMPLEMENTATIONS_V2.md  CHART_CONFIG_CONTRACT.md  CI_COST_CONTROL_PLAN.md  COACH_DECISION_ENGINE.md  COACH_UX_COPYBOOK.md  CONTRACT_FIRST_TESTING.md  DEMO_WT_COACH_5MIN.md  DEMO_WT_COACH_PAPER.md  DEPLOY_BACKEND.md  DEVELOPER_ONBOARDING.md  ENGINE_ORCHESTRATION_AUDIT.md  FATMAX_PROTOCOL.md  FIT_PARSER_POLICY.md  FRONTEND_API_FACADE.md  FRONTEND_CONNECT_NEXT_VERCEL.md  FRONTEND_DEVELOPER_GUIDE.md  FRONTEND_IMPLEMENTATION_BLUEPRINT.md  HARDENING_TESTS.md  HEALTH_DAILY_SYNC_CONTRACT.md  INGEST_PIPELINE_ARCHITECTURE.md  MERGE_V5_1_BACKEND.md  METABOLIC_CURVES_TWIN_CONTRACT.md  METABOLIC_FIT_DIAGNOSTICS.md  METABOLIC_INPUT_AUDIT.md  METABOLIC_POLICY_AND_CALIBRATION.md  METABOLIC_PROFILER_INCREMENTAL_REFACTOR.md  METABOLIC_SEGMENTED_REFACTOR_AND_STATIC_HARDENING.md  MMP_TWIN_FRONTEND_CONTRACT.md  MULTI_TENANT_STRESS_TESTING.md  OPENAPI_FRONTEND.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCT_ANALYTICS_BACKEND_V1.md  PYTHON_VERSION_POLICY.md  RELEASE_NOTES_v5.1.0.md  (+21 more)
engines/: __init__.py  engines__init__ (1).py  engines__init__.py  hrv_engine.py
engines/adaptive_load/: __init__.py  models.py  orchestrator.py  pytest_adaptive_load.py  readiness.py  recommendation.py  scoring.py  (+1 more)
frontend/: README.md  package-lock.json  package.json
openapi/: README.md  openapi.json
reports/: ENGINE_LOCKDOWN_RUN_SUMMARY.md
scripts/: README.md  check_coverage_baseline.py  check_openapi_consistency.py  export_openapi.py  perfection_gate.py  perfection_status.py  smoke_test_athlete_model.sql
streamlit_frontend/: README.md  app.py
supabase/: REVIEW_EXISTING_PROJECT.md  SCHEMA_ROADMAP.md  SCHEMA_V5.2_PERSISTENCE.md  config.toml
tablet_app/: .gitignore  README.md  pubspec.yaml
tests/: README_endurance_bounded.md  _fixtures.py  _hardening_utils.py  chart_output_quality.py  cleanup_note_endurance.md  conftest.py  coverage_baseline.json  engine_output_quality.py  golden_support.py  openapi_matrix_support.py  perfection_exceptions.json  perfection_manifest.json  product_quality.py  pytest_ability_profile_contract.py  pytest_activity_parser_charts.py  pytest_activity_statistics.py  pytest_adaptive_load.py  pytest_adaptive_planner.py  pytest_api_key_auth.py  pytest_athlete_model_unification.py  pytest_audit_immediate_fixes.py  pytest_backend_implementations.py  pytest_bayesian_bimodal_fallback.py  pytest_chart_config_registry.py  pytest_chart_output_quality.py  pytest_chart_roadmap_items.py  pytest_coach_context_layer.py  pytest_coach_orchestrator.py  pytest_coach_phase2.py  pytest_coach_phase3.py  pytest_coach_phase4.py  pytest_contract_bug_hunt.py  pytest_contract_full_codebase.py  pytest_corrupt_fit.py  pytest_cors_config.py  pytest_daily_energy_engine.py  pytest_dfa_tier.py  pytest_domain_error_contract.py  pytest_engine_api_coverage.py  pytest_engine_lockdown_v1.py  (+117 more)
tools/: _golden_fit_builder.py  apply_fit_decoder_boundary_safety_patch.py  apply_fit_phase8_typed_boundary_test.py  audit_flat_imports.py  generate_demo_wt_paper_pdf.py  generate_golden_fit_assets.py  generate_protocolli_atleti_pdf.py  golden_fit_coach_snapshot.py  standalone_adaptive_load_api.py
(+285 files in other folders)
