[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "physiology-digital-twin"
version = "5.2.7"
description = "Stateless analytics backend for endurance sports — metabolic profiling, HRV, training load, session classification, longitudinal tracking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "fitdecode>=0.11",
    "fitparse>=1.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "defusedxml>=0.7.1",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
pdf = ["pypdf>=3.0"]
dev = [
    "black>=24.0",
    # Dev/test HTTP client. Starlette 0.40+ may warn that httpx-based TestClient is
    # deprecated in favour of httpx2; filtered in pytest filterwarnings below.
    "httpx>=0.26",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pypdf>=3.0",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
run-in-person-test = "run_in_person_test:main"
verify-package-integrity = "verify_package_integrity:main"

[tool.setuptools.packages.find]
include = ["engines*", "api*"]

[tool.pytest.ini_options]
# Make local package imports stable when running pytest from the repository root
# without requiring PYTHONPATH=. or an editable install.
pythonpath = ["."]
# Keep a plain ``pytest`` run equivalent to the repository test discovery scope.
# python_files stays restricted to pytest_*.py, so adding api/ and engines/ only
# collects colocated regression tests and prevents source-tree tests from being
# silently skipped by CI wrappers that do not call Makefile targets.
testpaths = ["tests", "api", "engines"]
python_files = ["pytest_*.py"]
python_functions = ["test_*"]
markers = [
    "hardening: robustness tests for malformed inputs, timeouts and JSON safety",
    "stress: bounded stress tests for larger payloads and workloads",
    "slow: tests that are intentionally heavier than smoke checks",
]
filterwarnings = [
    # fitparse currently calls datetime.utcfromtimestamp(); keep CI clean until
    # the dependency is upgraded/replaced before Python 3.14 removal.
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated and scheduled for removal.*:DeprecationWarning:fitparse\\..*",
    # Starlette deprecates httpx-backed TestClient when httpx>=0.27 is installed.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*:starlette.exceptions.StarletteDeprecationWarning:fastapi\\.testclient",
]

[tool.coverage.run]
branch = true
source = ["engines", "api"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "engines/core/audit.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["api", "api_app.py", "tests", "scripts"]
exclude = [
    "frontend",
    "reports",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
files = ["api", "api_app.py"]
explicit_package_bases = true
